# OOP6

./: .gitignore  CMakeLists.txt  allocator.c  allocator.h  arena.h
include/: allocator.h  arena.h  config.h  header.h  kernal.h  rb_tree.h
src/: allocator.c  arena.c  header.c  main.c  rb_tree.c  win_kernal.c
trash/: main.S  main.c
